// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar (character-sheet) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#141313",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "fontFamily": "telegrama_raw",
          "height": 19,
          "includeFontPadding": false,
          "lineHeight": 22,
          "textAlign": "center",
          "textAlignVertical": "bottom",
        }
      }
    >
      Actions: 
      10
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "height": 15,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          [ Character ]
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Timelines
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Feed (2)
        </Text>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "fontSize": 45.911331934501746,
          "height": 40.019999999999996,
          "includeFontPadding": false,
          "lineHeight": 15,
          "textAlignVertical": "top",
        }
      }
    >
      +--------------------------------------------------------+
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  />
</View>
`;

exports[`Navbar (different route) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#141313",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "fontFamily": "telegrama_raw",
          "height": 19,
          "includeFontPadding": false,
          "lineHeight": 22,
          "textAlign": "center",
          "textAlignVertical": "bottom",
        }
      }
    >
      Actions: 
      10
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "height": 15,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Character
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Timelines
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Feed (2)
        </Text>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "fontSize": 45.911331934501746,
          "height": 40.019999999999996,
          "includeFontPadding": false,
          "lineHeight": 15,
          "textAlignVertical": "top",
        }
      }
    >
      +--------------------------------------------------------+
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  />
</View>
`;

exports[`Navbar (timeline-grid) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#141313",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "fontFamily": "telegrama_raw",
          "height": 19,
          "includeFontPadding": false,
          "lineHeight": 22,
          "textAlign": "center",
          "textAlignVertical": "bottom",
        }
      }
    >
      Actions: 
      10
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "height": 15,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Character
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          [ Timelines ]
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Feed (2)
        </Text>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "fontSize": 45.911331934501746,
          "height": 40.019999999999996,
          "includeFontPadding": false,
          "lineHeight": 15,
          "textAlignVertical": "top",
        }
      }
    >
      +--------------------------------------------------------+
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  />
</View>
`;

exports[`Navbar (timeline-grid) => renders correctly 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#141313",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "fontFamily": "telegrama_raw",
          "height": 19,
          "includeFontPadding": false,
          "lineHeight": 22,
          "textAlign": "center",
          "textAlignVertical": "bottom",
        }
      }
    >
      Actions: 
      10
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "height": 15,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Character
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          Timelines
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#329932",
              "flex": 1,
              "fontFamily": "telegrama_raw",
              "fontSize": 13,
              "height": 9,
              "includeFontPadding": false,
              "lineHeight": 9,
              "textAlign": "center",
              "textAlignVertical": "bottom",
            }
          }
        >
          [ Feed (2) ]
        </Text>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "fontSize": 45.911331934501746,
          "height": 40.019999999999996,
          "includeFontPadding": false,
          "lineHeight": 15,
          "textAlignVertical": "top",
        }
      }
    >
      +--------------------------------------------------------+
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  />
</View>
`;

exports[`Navbar (winner declared) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#141313",
      "flexDirection": "column",
      "height": "100%",
      "paddingBottom": 5,
      "paddingTop": 5,
      "width": "100%",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#329932",
        "fontSize": 45.911331934501746,
        "height": 40.019999999999996,
        "includeFontPadding": false,
        "lineHeight": 15,
        "paddingLeft": 15,
        "paddingRight": 15,
        "textAlignVertical": "top",
      }
    }
  >
    +------------------------------------------------------+
  </Text>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "lineHeight": 13,
          "textAlignVertical": "top",
          "width": 22.5,
        }
      }
    >
       | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 

    </Text>
    <View
      style={
        Object {
          "backgroundColor": "#141313",
          "flexDirection": "column",
          "height": "100%",
          "maxWidth": 291,
          "paddingBottom": 5,
          "paddingTop": 5,
          "width": "100%",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#141313",
            "color": "#329932",
            "flex": 1,
            "fontFamily": "telegrama_raw",
            "fontSize": 25,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
      >
        GAME OVER
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#141313",
            "color": "#329932",
            "flex": 1,
            "fontFamily": "telegrama_raw",
            "fontSize": 25,
            "textAlign": "center",
            "textAlignVertical": "center",
          }
        }
      >
        Winner: 
        Aram
      </Text>
      <Image
        source={
          Object {
            "uri": "http://10.0.0.6:3000/placeholders/nopic.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#141313",
            "borderColor": "black",
            "flex": 2,
            "marginBottom": 20,
            "maxHeight": 200,
            "maxWidth": 200,
            "resizeMode": "stretch",
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "green",
              "height": "100%",
              "opacity": 0.5,
              "width": "100%",
            }
          }
        />
      </Image>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#329932",
          "flex": 0,
          "lineHeight": 13,
          "textAlignVertical": "top",
          "width": 22.5,
        }
      }
    >
       | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 
 | 

    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#329932",
        "fontSize": 45.911331934501746,
        "height": 40.019999999999996,
        "includeFontPadding": false,
        "lineHeight": 15,
        "paddingLeft": 15,
        "paddingRight": 15,
        "textAlignVertical": "top",
      }
    }
  >
    +------------------------------------------------------+
  </Text>
</View>
`;
